--- a/explore.ipynb
+++ b/explore.ipynb
@@ -3,19 +3,102 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e2c4b52",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "id": "742e3fd5",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#importing libraries\n",
+    "import requests\n",
+    "from bs4 import BeautifulSoup\n",
+    "import re\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e2c4b52",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#getting url-setup\n",
+    "url = \"https://movies.disney.com/a-z\"\n",
+    "r = requests.get(url)\n",
+    "soup = BeautifulSoup(r.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "394754cf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#scrapping all movie titles from website\n",
+    "titles = []\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ae59cdee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#getting Rotten Tomatoes urls for all the titles\n",
+    "urls = []\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ad05ea71",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#getting relevant information from each url\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cdf83d4b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#putting the information into a dataframe\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "612d65af",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#cleaning the dataframe\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "36101269",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#analyzing\n"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Movies_Analysis",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
