Filled in outline more

--- a/explore.ipynb
+++ b/explore.ipynb
@@ -56,7 +56,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#getting relevant information from each url\n"
+    "#getting relevant information from each url\n",
+    "title = []\n",
+    "audience_score = []\n",
+    "critic_score = []\n",
+    "#This is film rating-PG,R,etc\n",
+    "rating = []\n",
+    "revenue = []\n",
+    "awards = []\n",
+    "#We will get the full date now, but we will likely need to split it into month and year (and season) later\n",
+    "release_date = []\n"
    ]
   },
   {
