Filled in webscraping part of outline

--- a/explore.ipynb
+++ b/explore.ipynb
@@ -11,7 +11,9 @@
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
     "import re\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import matplotlib as plt\n",
+    "import seaborn as sns"
    ]
   },
   {
@@ -46,7 +48,24 @@
    "outputs": [],
    "source": [
     "#getting Rotten Tomatoes urls for all the titles\n",
-    "urls = []\n"
+    "#Note: Rotten Tomatoes does the title all lowercase with no special characters, and all spaces replaced by underscores\n",
+    "#Ex- Terminator: Dark Fate\n",
+    "#url is- https://www.rottentomatoes.com/m/terminator_dark_fate\n",
+    "urls = []\n",
+    "base = \"https://www.rottentomatoes.com/m/\"\n",
+    "for title in titles:\n",
+    "    #cleaning title-\n",
+    "    clean = \"\"\n",
+    "    #all lowercase\n",
+    "    \n",
+    "    #removing special characters\n",
+    "\n",
+    "    #replacing spaces with underscores\n",
+    "\n",
+    "    #creating full url with it\n",
+    "    full_url = f\"{base}{clean}\"\n",
+    "print(len(urls))\n",
+    "print(urls)"
    ]
   },
   {
@@ -60,12 +79,32 @@
     "title = []\n",
     "audience_score = []\n",
     "critic_score = []\n",
+    "revenue = []\n",
+    "genre = []\n",
+    "awards = []\n",
     "#This is film rating-PG,R,etc\n",
     "rating = []\n",
-    "revenue = []\n",
-    "awards = []\n",
     "#We will get the full date now, but we will likely need to split it into month and year (and season) later\n",
-    "release_date = []\n"
+    "release_date = []\n",
+    "for url in urls:\n",
+    "    #getting title\n",
+    "\n",
+    "    #getting audience score\n",
+    "\n",
+    "    #getting critic score\n",
+    "\n",
+    "    #getting rating\n",
+    "\n",
+    "    #getting box-office revenue\n",
+    "\n",
+    "    #getting genre\n",
+    "\n",
+    "    #getting release date\n",
+    "\n",
+    "    #getting awards (may be none)\n",
+    "\n",
+    "    pass\n",
+    "\n"
    ]
   },
   {
@@ -75,7 +114,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#putting the information into a dataframe\n"
+    "#putting the information into a dataframe\n",
+    "df = pd.DataFrame({\"Title\":title,\"Audience-Score\":audience_score,\"Critic-Score\":critic_score,\"Revenue\":revenue,\"Release-Date\":release_date,\"Film-Rating\":rating,\"Genre\":genre,\"Awards\":awards})\n",
+    "#printing to check what we will need to clean next\n",
+    "print(df.head())"
    ]
   },
   {
@@ -91,11 +133,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "9cf6dddc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#creating month, year, and season column from \"Release-Date\" and deleting release date column\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "36101269",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#analyzing\n"
+    "#analyzing...\n"
    ]
   }
  ],
