--- a/explore.ipynb
+++ b/explore.ipynb
@@ -19,6 +19,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "9f47b893",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Webscraping section"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "5e2c4b52",
    "metadata": {},
    "outputs": [],
@@ -137,7 +147,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#creating month, year, and season column from \"Release-Date\" and deleting release date column\n"
+    "#creating month, year, decade, and season column from \"Release-Date\" and deleting release date column\n"
    ]
   },
   {
@@ -147,7 +157,298 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#analyzing...\n"
+    "#Analysis Section - From here on, rating refers to score unless otherwise specified"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ca9ae7cb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#What is the average movie rating each year? (audience and critic)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "88abfb29",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Average movie rating each decade (audience and critic)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "55e0e43b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Note section:\n",
+    "#What is the trend in ratings? (rising, falling, stagnant, other)\n",
+    "\n",
+    "#Is it different between audiences and critics? If so, by what degree? \n",
+    "\n",
+    "#Any other anomalies you notice? Any dips or highs? Why might that be?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "214c31b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#What is the average box office revenue each year? \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "91fade13",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Revenue for each decade\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a0c8f6fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Revenue for each season? \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "027aecbe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Does revenue correlate with ratings? \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "40e4c441",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Does revenue correlate more strongly with audience or critic ratings?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af99a6bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Note: What is the trend regarding revenue?\n",
+    "\n",
+    "#Please note any other anomalies and your explanation (it's okay if you don't know)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33b552f7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#How many total directors have there been? \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4e46db7a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#How many different directors have there been each year? Each decade?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f1111cc6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#What is the average revenue of movies made by each director?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fbaaad76",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#What is the average rating of movies made by each director?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12ce4794",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Do directors with more movies have better ratings?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e65f3380",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Do directors movies get better ratings as they make more movies?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f26da2c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Note: Make any notes about directors and relationships with other variables\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "961e48e7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Any interesting relationships between film rating and rating?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9cc9bff7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#What about film rating and revenue? \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0423e63e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Note: Note anything interesting regarding film rating\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9fe1b288",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Any interesting relationships between genre and rating?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e456fb4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#What about genre and revenue?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8156147b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#What is the count of different film ratings in each genre?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dfcfe646",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Note: Add anything interesting regarding genre\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "535693db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#What is the average number of awards a movie gets?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27a9a57a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#What is the average number of movie awards for each decade? Does it show a trend?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4170cb1c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#What about year? Does it show any trends?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "152c8ccc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Note: Add anything interesting regarding awards\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fe10b20e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Note: Add any overall thoughts\n",
+    "\n"
    ]
   }
  ],
