--- a/explore.ipynb
+++ b/explore.ipynb
@@ -966,27 +966,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": null,
    "id": "9cf6dddc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#creating month, year, decade, and season column from \"Release-Date\" and deleting release date column\n"
+    "#creating month, year, decade, and season column from \"Release-Date\" and deleting release date column\n",
+    "#decade creation\n",
+    "df[\"Decade\"] = (df[\"Release-Date\"] // 10) * 10\n",
+    "#sseson creation\n",
+    "df['season'] = df[]\n",
+    "#\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": null,
    "id": "f97555d8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#saving the dataframe as a csv\n"
+    "#saving the dataframe as a csv\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": null,
    "id": "36101269",
    "metadata": {},
    "outputs": [],
@@ -996,22 +1003,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": null,
    "id": "ca9ae7cb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#What is the average movie rating each year? (audience and critic)"
+    "#What is the average movie rating each year? (audience and critic)\n",
+    "\n",
+    "Aud_mean_year = df.groupby('Release-Date')['Audience-Score'].mean()\n",
+    "Crit_mean_year = df.groupby('Release-Date')['Critic-Score'].mean()\n",
+    "Ave_mean_year = (Aud_mean_year + Crit_mean_year)/2\n",
+    "\n",
+    "print(f'Audience score by year' {Aud_mean_year})\n",
+    "print(f'Critic score by year' {Crit_mean_year})\n",
+    "print(f'The avrage of the two scores' {Ave_mean_year})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": null,
    "id": "88abfb29",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Average movie rating each decade (audience and critic)"
+    "#Average movie rating each decade (audience and critic)\n",
+    "\n",
+    "df[\"Decade\"] = (df[\"Release-Date\"] // 10) * 10\n",
+    "\n",
+    "\n",
+    "Aud_mean_dec = df.groupby('Decade')['Audience-Score'].mean()\n",
+    "Crit_mean_dec = df.groupby('Decade')['Critic-Score'].mean()\n",
+    "ave_mean_dec = ((Aud_mean_dec+Crit_mean_dec)/2).mean()"
    ]
   },
   {
@@ -1031,27 +1053,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": null,
    "id": "214c31b5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#What is the average box office revenue each year? \n"
+    "#What is the average box office revenue each year? \n",
+    "\n",
+    "Revenue_mean_year = df.groupby('year')['Revenue'].mean()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": null,
    "id": "91fade13",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Revenue for each decade\n"
+    "#Revenue for each decade\n",
+    "Revenue_mean_year = df.groupby('Decade')['Revenue'].mean()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": null,
    "id": "a0c8f6fb",
    "metadata": {},
    "outputs": [],
@@ -1061,22 +1086,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": null,
    "id": "027aecbe",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Does revenue correlate with ratings? \n"
+    "#Does revenue correlate with audience ratings?\n",
+    "\n",
+    "sns.scatterplot(data = df, x = 'Revenue', y = 'Audience-Score')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": null,
+   "id": "577e78c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Does revenue correlate with critic ratings?\n",
+    "\n",
+    "sns.scatterplot(data = df, x = 'Revenue', y = 'Critic-Score')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "40e4c441",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Does revenue correlate more strongly with audience or critic ratings?\n"
+    "#Does revenue correlate more strongly with audience or critic ratings?\n",
+    "\n"
    ]
   },
   {
