Updated blog post

--- a/explore.ipynb
+++ b/explore.ipynb
@@ -3083,7 +3083,8 @@
     "        return \"Summer\"\n",
     "    elif month in [9, 10, 11]:\n",
     "        return \"Fall\"\n",
-    "    else: return np.nan\n",
+    "    else: \n",
+    "        return np.nan\n",
     "\n",
     "df[\"season\"] = df[\"month\"].apply(get_season)\n",
     "\n",
